# finalproject

./: 2.py  Bot.py  __main__.py  docker  hlam.py  logs.txt  pipfile  pyproject.toml
