[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Klyap Yuriy <yuraklyap1103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
